--- a/skill.html
+++ b/skill.html
@@ -16,10 +16,10 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="skill.html">Skill</a></li>
-        <li><a href="style.html">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
      </ul>  
     </nav>
 
