--- a/education.html
+++ b/education.html
@@ -30,7 +30,7 @@
   <section class="kedge">
 
     <div class="kedge_div">
-      <img class="kedge_img" src="images/Kedge.png">
+      <img class="kedge_img" src="images/Kedge.png" alt="MSc. Marketing at Kedge 2023">
     </div>
 
     <div>
@@ -89,7 +89,7 @@
     </div>
 
     <div>
-      <img class="tamkang_img" src="images/Tamkang.JPG">
+      <img class="tamkang_img" src="images/Tamkang.JPG" alt="graduate from Tamkang University">
     </div>
     
   </section>
