--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section class="imgs">
       <div >
-      <img src="images/violon.png" alt="yu-chiao's violin">
+      <img src="images/Violon.png" alt="yu-chiao's violin">
       </div>
 
       <div>
@@ -55,7 +55,7 @@
       </div>
 
       <div>
-      <img src="images/crochet.jpeg">
+      <img src="images/crochet.jpeg" alt="crochet">
       </div>
     </section>
 
