--- a/skill.html
+++ b/skill.html
@@ -31,8 +31,8 @@
       <div class="language">
         <h2>Language</h2>
         <p>Mandarin - Native speaker</p>
-        <p>French - Advance</p>
-        <p>English - Advance</p>
+        <p>French - Advanced</p>
+        <p>English - Advanced</p>
       </div>
 
       <div class="certification">
